Changes for 3.0.4rc1

New features:

Bug fixes:
..F....... [ZBX-10794] fixed saving of "Show text as HTML" checkbox in Monitoring->Screens (Cemeris)
..F....... [ZBX-10504] decreased padding and margins in tables and across the whole UI (Pavel)
..F....... [ZBX-10504] added compression of generated CSS files to reduce size from 99K to around 56K (asaveljevs, Pavel)
...GI..... [ZBX-10760] fixed agent, get and sender being erroneously linked against UnixODBC (gleb)
..F....... [ZBX-10647] removed disabled status for "Export to CSV" button (Ivo)
..F....... [ZBX-10679] fixed vertical scrollbar overlapping in messages (Pavel)
..F....... [ZBX-10778] fixed users online status in users.php users table (Cemeris, Gunars)
..F....... [ZBX-10605] fixed access_deny() message layout for not logged in page visitors (Cemeris)
..F....... [ZBX-10605] fixed access to popup_media for Zabbix Admin user in profile->media (Cemeris)
..F....... [ZBX-10806] fixed whitespace between elements in the IT services form (Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.3

3.0.3rc1 was released as 3.0.3 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.3rc1

New features:
..F....... [ZBX-10672] added script name and command into a script execution form (Cemeris, Pavel, Sasha)
A.F....... [ZBX-1357] enabled Chinese (China) translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), English (United States), French, Italian, Japanese, Korean, Polish, Portuguese (Brazil), Russian, Slovak, Spanish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
...G...PS. [ZBX-9839] fixed Windows compilation error and time zone related issues (gleb, viktors)
A......... [ZBX-10752] fixed array formatting in exported JSON (Cemeris, Sasha)