@@ -3,6 +3,7 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)
 ..F....... [ZBX-10794] fixed saving of "Show text as HTML" checkbox in Monitoring->Screens (Cemeris)
 ..F....... [ZBX-10504] decreased padding and margins in tables and across the whole UI (Pavel)
 ..F....... [ZBX-10504] added compression of generated CSS files to reduce size from 99K to around 56K (asaveljevs, Pavel)
@@ -1388,6 +1389,7 @@ Changes for 2.2.14rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.13
